# graphql-query

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: main.yml
benches/: parser.rs
src/: error.rs  lib.rs
src/ast/: ast.rs  ast_conversion.rs  ast_kind.rs  ast_util.rs  lexer.rs  mod.rs  parser.rs  printer.rs
src/json/: conversion.rs  mod.rs  values.rs
src/schema/: build_client_schema.rs  introspection.rs  mod.rs  schema.rs  schema_reference.rs
src/schema/sdl/: error.rs  finalizers.rs  lexer.rs  mod.rs  parse_ast.rs  parser.rs  tests.rs
src/validate/: context.rs  mod.rs  validate.rs
src/validate/rules/: known_fragment_names.rs  lone_anonymous_operation.rs  mod.rs  no_fragment_cycles.rs  no_undefined_variables.rs  no_unused_fragments.rs  no_unused_variables.rs  unique_argument_names.rs  unique_fragment_names.rs  unique_operation_names.rs  unique_variable_names.rs
src/visit/: compose.rs  folder.rs  folder_simple.rs  mod.rs  path.rs  visitor.rs
